--- a/wiki/progressive.wikitext
+++ b/wiki/progressive.wikitext
@@ -19,4 +19,4 @@
 #A person who actively favors or strives for progress toward better conditions, as in society or government.
 #A member or supporter of a Progressive Party.
 ====Translations====
-*Russian:[[прогрессивный человек]], [[прогрессивный деятель]], [[сторонник прогресса]] (1), [[член прогрессивной партии]]
+*Russian:[[прогрессивный человек]], [[прогрессивный деятель]], [[сторонник прогресса]] (1), [[член прогрессивной партии]] (2)
