--- a/wiki/mardy.wikitext
+++ b/wiki/mardy.wikitext
@@ -2,7 +2,7 @@
 
 ===Adjective===
 
-# personal attribute, most usually applied to a child -  cries easily, is unusually sensitive, sad. ''Derogatory''
+# (''Derogatory'') Personal attribute, most usually applied to a child -  cries easily, is unusually sensitive, sad.
 
 ===Examples / Explanation===
 Possibly derived from the concept of the child being 'marred', flawed.
