--- a/wiki/godson.wikitext
+++ b/wiki/godson.wikitext
@@ -1,3 +1,19 @@
 ===Noun===
 ====Translations====
 *{{sk}}: [[krstný syn]] ''m''
+
+
+====Related terms====
+*[[baptise]], [[baptize]]
+*[[baptism]], [[baptisms]]
+*[[baptismal]], [[baptistery]], [[baptistry]]
+*[[baptist]], [[Baptist]]
+*[[baptism of fire]]
+*[[christening]]
+*[[dunking]]
+*[[godchild]]
+*[[goddaughter]]
+*[[godfather]]
+*[[godmother]]
+*[[godparent]]
+*[[sprinkling]]
