--- a/wiki/progressive.wikitext
+++ b/wiki/progressive.wikitext
@@ -5,7 +5,8 @@
 #Promoting or favoring progress toward better conditions or new policies, ideas, or methods
 #:a progressive politician
 #:progressive business leadership
-#Of or relating to a [[w:Progressive Party|Progressive Party]]: the Progressive platform of [[w:1924|1924]].
+#'''Progressive''' Of or relating to a [[w:Progressive Party|Progressive Party]]
+#:''"This is history we have made," said Dexter Randall, a 59-year-old dairy farmer and newly elected Progressive representative from North Troy.''[http://www.progressiveparty.org/news/view/?id=66]
 #Of or relating to progressive education
 #:a progressive school.
 #Increasing in rate as the taxable amount increases
@@ -17,6 +18,8 @@
 
 ===Noun===
 #A person who actively favors or strives for progress toward better conditions, as in society or government.
-#A member or supporter of a Progressive Party.
 ====Translations====
 *Russian:[[прогрессивный человек]], [[прогрессивный деятель]], [[сторонник прогресса]] (1), [[член прогрессивной партии]] (2)
+===Proper Noun===
+'''Progressive'''
+#A member or supporter of a Progressive Party.
