expanded related-to links, initial definition <baptism#43898>

--- a/wiki/baptism.wikitext
+++ b/wiki/baptism.wikitext
@@ -2,8 +2,24 @@
 ===Noun===
 '''baptism''' ([[uncountable]] and [[countable]]; plural: [[baptisms]])
 
-====Synonyms====
-*[[Christening]] (may depend on religion & denomination)
+The act, experience and process of using water in a significant religious ceremony.
+
+Usually used in a [[Christian]] context based upon the original [[Jewish]] [[mikvah]] context.
+
+The exact form of using water depends upon the Christian context, but can include
+sprinkling on the head, pouring over the head, dunking the head in a basin, and 
+immersion of the entire body in a river or vessel such as a baptistry.
+
+Much of the exact details of the ceremony may depend on the particular religious 
+denomination. In some groups, baptism is considered a [[sacrament]], and in others,
+it is considered an [[ordinance]] of Jesus Christ.
+
+It is common that baptism is associated with [[repentance]], removing the impurity of [[sin]], 
+physical [[birth]], spiritual re-birth and/or with Christian [[conversion]].
+
+Baptism often is associated with prayers, benedictions, and blessings.  It is
+common that when it is in the form of [[Christening]], that baptism also involves
+an oath by [[godparents]] to aid the [[godchild]] in their life endeavors.
 
 ====Translations====
 *[[Dutch]]: [[doop]] ''m''
