--- a/wiki/consecration.wikitext
+++ b/wiki/consecration.wikitext
@@ -4,4 +4,9 @@
 
 '''consecration'''
 
-#The act or ceremony of consecrating; the state of being consecrated; dedication.
+#The act or ceremony of consecrating; the state of being consecrated; [[dedication]].
+
+
+see also:
+[[sacrament]]
+[[unction]]
