Added Webster material <step#41914>

--- a/wiki/step.wikitext
+++ b/wiki/step.wikitext
@@ -1,38 +1,86 @@
 ==English==
+===Etymology===
+Anglo Saxon ''[[stæppan]]''; akin to Old Friesian. ''[[steppa]]'', Dutch ''[[stappen]]'' to step, ''[[stap]]'' a step, Old High German ''[[stepfen]]'' to step, German ''[[stapfe]]'' a footstep, Old High German ''[[stapfo]]'', German ''[[stufe]]'' a step to step on; compare Greek to shake about, handle roughly, stamp. Compare [[stamp]], noun and adjective
 ===Pronunciation===
 *SAMPA: /stEp/
-====Homophones====
+===Homophones===
 *[[steppe]]
+===Intransitive verb===
+'''step, stepped, stepping'''
+#To move the foot in walking; to advance or recede by raising and moving one of the feet to another resting place, or by moving both feet in succession.
+#To walk; to go on foot; esp., to walk a little distance; as, to step to one of the neighbors.
+#To walk slowly, gravely, or resolutely.
+#:Home the swain retreats, His flock before him '''stepping''' to the fold. - [[Thomson?]]
+#''(Figuratively):'' To move mentally; to go in imagination.
+#:They are '''stepping''' almost three thousand years back into the remotest antiquity. - [[Alexander Pope]]
+====Derived expressions====
+*'''To step aside''': to walk a little distance from the rest; to retire from company
+*'''To step forth''': to move or come forth
+*'''To step in''' ''or'' '''into'''
+*#To walk or advance into a place or state, or to advance suddenly in.
+*#:Whosoever then first, after the troubling of the water, '''stepped''' in, was made whole of whatsoever disease he had. - ''John 5:4''
+*#To enter for a short time; as, I just stepped into the house
+*#To obtain possession without trouble; to enter upon easily or suddenly; as, to step into an estate
+*'''To step out''':
+*#''(Military):'' To increase the length, but not the rapidity, of the step, extending it to thirty-tree inches
+*#To go out for a short distance or a short time
+*'''To step short''', ''(Military):'' to diminish the length or rapidity of the step according to the established rules.
+====Translations====
+*'''Chinese''': [[走]], [[步行]]
+*'''Finnish''': [[astua]]
+*'''German''': [[treten]]
+*'''Japanese''': [[歩く]]
+*'''Russian''': [[шагнуть]] (shagnut')
+*'''Spanish''': [[caminar]]
+
+===Transitive verb===
+#To set, as the foot.
+#''(Nautical):'' To fix the foot of (a mast) in its step; to erect. 
+====Derived expressions====
+*'''To step off:''' to measure by steps, or paces; hence, to divide, as a space, or to form a series of marks, by successive measurements, as with dividers.
 
 ===Noun===
 '''step''' ([[steps]])
-#forward movement with legs, from one foot to the other 
+#An advance or movement made from one foot to the other; a pace.
+#A rest, or one of a set of rests, for the foot in ascending or descending, as a stair, or a [[rung]] of a ladder.
+#:The breadth of every single '''step''' or stair should be never less than one foot. - Sir [[H. Wotton]]
+#The space passed over by one movement of the foot in walking or running; as, one step is generally about three feet, but may be more or less. Used also figuratively of any kind of progress; as, he improved step by step, or by steps.
+#:To derive two or three general principles of motion from phenomena, and afterwards to tell us how the properties and actions of all corporeal things follow from those manifest principles, would be a very great '''step''' in philosophy. - [[Isaac Newton]]
+#A small space or distance; as, it is but a '''step'''.
+#A print of the foot; a footstep; a footprint; track.
+#[[Gait]]; manner of walking; as, the approach of a man is often known by his step.
+#Proceeding; measure; action; an act.
+#:The reputation of a man depends on the first '''steps''' he makes in the world. - [[Alexander Pope]]
+#:Beware of desperate '''steps'''. The darkest day, Live till to-morrow, will have passed away. - [[William Cowper]]
+#:I have lately taken '''steps''' . . . to relieve the old gentleman's distresses. - [[G. W. Cable]]
+#''(plural):'' Walk; passage.
+#:Conduct my '''steps''' to find the fatal tree. - [[John Dryden]]
+#''(plural):'' A portable framework of stairs, much used indoors in reaching to a high position
+#''(Nautical):'' In general, a framing in wood or iron which is intended to receive an upright shaft; specif., a block of wood, or a solid platform upon the keelson, supporting the heel of the mast.
+#''(Machines):''
+##One of a series of offsets, or parts, resembling the steps of stairs, as one of the series of parts of a cone pulley on which the belt runs
+##A bearing in which the lower extremity of a spindle or a vertical shaft revolves.
+#''(Music):'' The interval between two contiguous degrees of the scale.
+#:'''Usage note:''' The word [[tone]] is often used as the name of this interval; but there is evident incongruity in using tone for indicating the interval between tones. As the word scale is derived from the Italian ''[[scala]]'', a ladder, the intervals may well be called steps.
+#''(Kinematics):'' A change of position effected by a motion of translation. - [[W. K. Clifford]]
+====Derived expressions====
+*'''Back step''', '''Half step''', etc. See under [[back]], [[half]], etc.
+*'''Step grate''': a form of grate for holding fuel, in which the bars rise above one another in the manner of steps
+*'''To take steps''': to take action; to move in a matter.
 
-===Synonyms===
+====Synonyms====
 [[stride]]
 
 ====Translations====
-*Chinese Characters: [[歩]], [[步]]
-*Chinese: [[步]], [[步态]]
-*Dutch: [[stap]] ''m''
-*Finnish: [[askel]]
-*French: [[étape]] ''m''
-*German: [[Schritt]] ''m''
-*Greek: [[βήμα]]
-*Italian: [[punto]] ''m''
-*Japanese: [[歩み]], [[歩幅]], [[ステップ]]
-*Korean: [[단계]]
-*Portuguese: [[etapa]] ''f''
-*Russian: [[шаг]] ''m'' (shag)
-*Spanish: [[paso]] ''m''
-
-===Verb===
-'''to step''' ([[steps]], [[stepped]], [[stepping]])
-
-====Translations====
-*Chinese: [[走]], [[步行]]
-*Finnish: [[astua]]
-*German: [[treten]]
-*Japanese: [[歩く]]
-*Russian: [[шагнуть]] (shagnut')
-*Spanish: [[caminar]]
+*'''Chinese''': [[步]], [[步态]]
+*'''Dutch''': [[stap]] ''m''
+*'''Finnish''': [[askel]]
+*'''French''': [[étape]] ''m''
+*'''German''': [[Schritt]] ''m''
+*'''Greek''': [[βήμα]]
+*'''Italian''': [[punto]] ''m''
+*'''Japanese''': [[歩み]], [[歩幅]], [[ステップ]]
+*'''Korean''': [[단계]]
+*'''Portuguese''': [[etapa]] ''f''
+*'''Russian''': [[шаг]] ''m'' (shag)
+*'''Spanish''': [[paso]] ''m''
