--- a/wiki/acquainted.wikitext
+++ b/wiki/acquainted.wikitext
@@ -1,1 +1,2 @@
-#REDIRECT [[acquaint]]
+===Adjective===
+#Personally known; familiar. See To be acquainted with, under [[acquaint]], (Transitive verb)
