proper definition <Passover#66002>

--- a/wiki/Passover.wikitext
+++ b/wiki/Passover.wikitext
@@ -1,1 +1,11 @@
-#REDIRECT [[Seder]]
+==English==
+
+===Proper Noun===
+'''Passover'''
+
+# The eight-day [[Jewish]] festival of [[Pesach]], commemorating the biblical story of [[Exodus]], during which the first-born sons of the Jews were passed over while those of the Egyptians were killed.
+# The [[Christian]] holy day generally falling on the first day of the Jewish Passover
+
+===See Also===
+*[[Paschal]]
+*[[Seder]]
