proper definition <seder#53168>

--- a/wiki/seder.wikitext
+++ b/wiki/seder.wikitext
@@ -1,6 +1,10 @@
-== English ==
-A [[Jewish]] annual feast, involving a meal with wine and unleavened bread, recalling the [[exodus]] and deliverance of the Jewish people from
-the land of Egypt through Moses. Seder is also called [[Passover]] due to the "passing over" by the [[angel]] of death 
-and sparing the lives of the [[first born]] children and animals. By extension Passover also refers to the eight days of the feast.
+==English==
 
-A Seder meal by Jesus Christ and his [[disciple]]s is the original source of the [[Christian]] ceremony alternately called [[Communion]], [[Mass]], or the [[Eucharist]].
+===Etymology===
+From the Hebrew סדך (seder), meaning ''order''.
+
+===Noun===
+'''seder''', (plural '''sidarim''' or '''siddarim''')
+
+# The ceremonial meal held on the first night or two nights of [[Passover]].
+# One of the 54 parts into which the [[Torah]] is divided.
