/* Etymology */ Typo (kof sofit should have been resh) <seder#53168>

--- a/wiki/seder.wikitext
+++ b/wiki/seder.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From the Hebrew סדך (seder), meaning ''order''.
+From the Hebrew סדר (seder), meaning ''order''.
 
 ===Noun===
 '''seder''', (plural '''sidarim''' or '''siddarim''')
