--- a/wiki/moonshine.wikitext
+++ b/wiki/moonshine.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 #The light of the moon
 #Illegaly distilled [[whiskey]]
-#: ''They [[watered down|water down]] the moonshine.''
+#: ''They [[water down|watered down]] the moonshine.''
 ===Synonyms===
 #[[moon]], [[moonlight]]
 #[[bootleg]], [[corn liquor]]
