--- a/wiki/progressive.wikitext
+++ b/wiki/progressive.wikitext
@@ -5,7 +5,7 @@
 #Promoting or favoring progress toward better conditions or new policies, ideas, or methods
 #:a progressive politician
 #:progressive business leadership
-#'''Progressive''' Of or relating to a [[w:Progressive Party|Progressive Party]]
+#Of or relating to a [[w:Progressive Party|Progressive Party]]
 #:''"This is history we have made," said Dexter Randall, a 59-year-old dairy farmer and newly elected Progressive representative from North Troy.''[http://www.progressiveparty.org/news/view/?id=66]
 #Of or relating to progressive education
 #:a progressive school.
