--- a/wiki/perfume.wikitext
+++ b/wiki/perfume.wikitext
@@ -30,7 +30,7 @@
 *Norwegian: [[parfyme]] ''c''
 *Polish: [[perfumy]] ''pl'' 
 *Portuguese: [[perfume]] ''m''
-*Russian: [[духи]] (dukhi)
+*Russian: [[благоухание]], [[аромат]] (1), [[духи]] (2)
 *Spanish: [[perfume]] ''m''
 *Turkish: [[parfüm]]
 
