clarified what this org. is <PROFECO#3450>

--- a/wiki/PROFECO.wikitext
+++ b/wiki/PROFECO.wikitext
@@ -2,4 +2,4 @@
 ===Abbreviation===
 '''PROFECO'''
 
-*[[Procuraduría Federal del Consumidor]], a Mexican public organisation
+*[[Procuraduría Federal del Consumidor]], a Mexican government consumer protection organisation
