--- a/wiki/Shabbat.wikitext
+++ b/wiki/Shabbat.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From Hebrew שבת (''shabbat''), meaning to ''stop'' or ''rest''.
+From Hebrew [[שבת]] (''shabbat''), meaning to ''stop'' or ''rest''.
 
 ===Proper Noun===
 '''Shabbat'''
