/* Letter */ added def. <c#8690>

--- a/wiki/c.wikitext
+++ b/wiki/c.wikitext
@@ -3,7 +3,7 @@
 
 #The third letter of the [[English]] alphabet, preceded by [[B]] and followed by [[D]], and representing /k/, or /s/ (before e, i or y). (''See [[appendix:English alphabet]]'')
 #A symbol of the [[IPA]], representing a [[voiceless]] [[palatal]] [[stop]].
-
+#Roman number for [[100]]
 ===Other Forms===
 *With [[cedilla]]: [[ç]]
 *With [[acute]]: [[ć]]
