<what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -28,8 +28,8 @@
 *:[[Comment vous appelez-vous ?]] (formal), [[Comment tu t'appelles ?]] (casual)
 *:(''literal translation'') [[Quel est votre nom ?]] (formal)
 *German: 
-*:[[Wie heißen Sie?]] (formal) (''How are you called?'')
-*:(''literal translation'') [[Wie ist Ihr Name?]] (formal), [[Wie ist dein Name?]] (casual)
+*:[[Wie heißen Sie?]] (formal)
+*:[[Wie heißt Du?]] (casual) 
 *{{gu}}
 *:[[તમારુ નામ શું છે ?]] (tamāru nām sun̩ tche) (formal) (''Your name what is ?'')
 *:[[તારુ નામ શું છે ?]] (tāru nām sun̩ tche) (casual) (''Your name what is ?'')
@@ -39,7 +39,8 @@
 *:[[आपका नाम क्या है ?]] (āpkā nām kyā he) (formal) ''Your name what is ?''
 *:[[तुम्हारा नाम क्या है ?]] (tumhārā nām kyā he) (casual) ''Your name what is ?''
 *Italian:
-*:(Formal [[Come si chiama Lei?]] (''How do you call yourself?'')
+*:[[Come si chiama?]] (formal)
+*:[[Come ti chiami?]] (casual)
 *Japanese:
 *:[[あなたの名前はなんですか？]] (anata no namae wa nan desu ka?)
 *Kannada:
