--- a/wiki/essiac.wikitext
+++ b/wiki/essiac.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+The inventor's surname "Caisse" spelled backwards.
 ===Noun phrase===
 '''essiac tea''' (''[[uncountable]]'')
 
