--- a/wiki/Wikipedia.wikitext
+++ b/wiki/Wikipedia.wikitext
@@ -73,7 +73,7 @@ From ''[[wiki]]''+''[[-pedia]]'', from English word ''[[encyclopedia]]''.
 *'''Romanica''': Wikipedia
 *'''Russian''': [[Википедия]] vikipediâ
 *'''Serbian''': [[Википедија]] vikipediya
-*'''[[Spanish]]''': Wikipedia ([[:w:es:to spanish Wikipedia]])
+*'''[[Spanish]]''': Wikipedia ([[:w:es:portada|To spanish Wikipedia mainpage]]).
 *'''Swedish''': [[Wikipedia]] ''c''
 *'''Syriac''': [[ܘܝܟܝܦܝܕܝܐ]] wīkīpīdyā
 *'''Toki Pona''': [[Wikipesija]]
