{{fr}}: [[intelligence]] ''f'' <intelligence#65465>

--- a/wiki/intelligence.wikitext
+++ b/wiki/intelligence.wikitext
@@ -13,4 +13,6 @@ From Latin ''intelligentia'', '''intelligence'''
 *[[Brightness]]
 
 ====Translations====
-*Spanish: [[inteligencia] ''f'' (1, 2)
+
+*{{es}}: [[inteligencia]] ''f'' (1, 2)
+*{{fr}}: [[intelligence]] ''f'' (1, 2)
