--- a/wiki/license.wikitext
+++ b/wiki/license.wikitext
@@ -1,4 +1,4 @@
-License (or licence ''Brit. Eng.'') - to give an official permission or a right to do / use.
+License (or [[licence]] ''Brit. Eng.'') - to give an official permission or a right to do / use.
 
 License is the British and international spelling of the verb and the American English spelling of both the verb and the noun.
 
