--- a/wiki/shrub.wikitext
+++ b/wiki/shrub.wikitext
@@ -10,13 +10,13 @@
 ** From [[Old English]] [[schrob]], [[Anglo-Saxon]] [[scrob]] or [[scrobb]]
 ** Akin to [[Norwegian]] [[skrubba]] the dwarf cornel tree
 * (Liquor)
-** From [[Arabic]] [[shirb]], [[shurb]], a drink, beferage, [[French]] [[shariba]] to drink
+** From [[Arabic]] [[shirb]], [[shurb]], a drink, beverage, [[French]] [[shariba]] to drink
 ** Comparable to [[Sirup]], [[Sherbet]]
 
 ===Noun===
 '''shrub''' (plural: [[shrubs]])
 
-# A woody plant of less size than a tree, and usually with several stems from the same root.
+# A woody plant smaller than a tree, and usually with several stems from the same root.
 # A liquor composed of vegetable acid, especially lemon juice, and sugar, with spirit to preserve it.
 
 ===Derived terms===
