--- a/wiki/Wikipedia.wikitext
+++ b/wiki/Wikipedia.wikitext
@@ -89,25 +89,16 @@ From ''[[wiki]]''+''[[-pedia]]'', from English word ''[[encyclopedia]]''.
 *Personal/Adjective: [[Wikipedian]]
 *[[Wiktionary]]
 
+== Look ups==
+To look up Wikipedia from Wiktionary, include '''<nowiki>{{Wikipedia}}''' in the page.
+
 === External links ===
 * [[w:Main Page|Wikipedia Home Page]]
 * [[m:Wikipedia Raster Name]]
 
-----
-
-==Vietnamese==
-
-===Etymology===
-From [[English]] "''Wikipedia''."
-
-===Pronunciation===
-*Pronounced in Vietnamese like "Uikhipéđia"
-
-===Proper noun===
-'''Wikipedia'''
 
 #[[#English|Wikipedia]]
 
 [[fr:Wikip&#233;dia]]
 [[ja:&#12454;&#12451;&#12461;&#12506;&#12487;&#12451;&#12450;]]
-[[vi:Wikipedia]]
+[[vi:Wikipedia]]</nowiki>
