/* Look ups */ <Wikipedia#671107>

--- a/wiki/Wikipedia.wikitext
+++ b/wiki/Wikipedia.wikitext
@@ -90,7 +90,7 @@ From ''[[wiki]]''+''[[-pedia]]'', from English word ''[[encyclopedia]]''.
 *[[Wiktionary]]
 
 == Look ups==
-To look up Wikipedia from Wiktionary, include '''<nowiki>{{Wikipedia}}''' in the page.
+To look up Wikipedia from Wiktionary, include '''<nowiki>{{Wikipedia}}</nowiki>''' in the page.
 
 === External links ===
 * [[w:Main Page|Wikipedia Home Page]]
