--- a/wiki/estimation.wikitext
+++ b/wiki/estimation.wikitext
@@ -1,3 +1,3 @@
-the use of physical and logical data to calculate the most correct answer, taken known uncertainty into concideration
+the use of physical and logical data to calculate the most correct answer, taking known uncertainty into consideration
 
 {{stub}}
