--- a/wiki/hierarchical.wikitext
+++ b/wiki/hierarchical.wikitext
@@ -1,13 +1,13 @@
 ==English==
+Compare French ''[[hiérarchique]]'' 
 ===Adjective===
 '''hierarchical'''
+#Pertaining to a hierarchy.
 #classified according to various criteria into successive levels or layers
-(e.g., It has been said that only a hierarchical society with a leisure class 
-at the top can produce works of art.)
-
-===Synonyms===
-*[[hierarchic]]
+#:It has been said that only a '''hierarchical''' society with a leisure class 
+at the top can produce works of art. - ''source?''
 
 ===Related terms===
-*[[hierarchal]]
+*[[hierarchal]], [[hierarchic]]
 *[[hierarchy]]
+*[[hierarchically]]
