--- a/wiki/denial.wikitext
+++ b/wiki/denial.wikitext
@@ -7,7 +7,8 @@
 #: ''The singer has issued a sweeping denial of all the rumors.''
 # Refusal to believe a problem exists
 #: ''We couldn't break through his denial about being alcoholic.''
-
+# What BlackWidow just said on Teamspeak
+#: ''We are not the same person.""
 ===Related terms===
 *[[deny]]
 *[[in denial]]
