--- a/wiki/hierarchical.wikitext
+++ b/wiki/hierarchical.wikitext
@@ -4,8 +4,7 @@ Compare French ''[[hiérarchique]]''
 '''hierarchical'''
 #Pertaining to a hierarchy.
 #classified according to various criteria into successive levels or layers
-#:It has been said that only a '''hierarchical''' society with a leisure class 
-at the top can produce works of art. - ''source?''
+#:It has been said that only a '''hierarchical''' society with a leisure class at the top can produce works of art. - ''source?''
 
 ===Related terms===
 *[[hierarchal]], [[hierarchic]]
