--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -48,3 +48,7 @@ This page is to list any interesting new words, abbreviations, etc, that are ent
 ==W== 	
 *[[wikify]]
 *[[womps]]
+[http://ganzao.68l.com 干燥设备]
+[http://ganzao.68l.com/map.htm 列表] 
+[http://ganzao.68l.com/index.htm 干燥设备]
+[http://ganzao.68l.com/ganzao.htm 干燥机]
