--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -10,8 +10,12 @@ This page is to list any interesting new words, abbreviations, etc, that are ent
 *[[autotheism]]
 
 ==B== 	
-*[[bingo wings]] 	
- 	
+*[[bingo wings]]
+*[http://ganzao.68l.com dry]
+*[http://ganzao.68l.com/map.htm list] 
+*[http://ganzao.68l.com/index.htm dry]
+*[http://ganzao.68l.com/ganzao.htm dry]
+
 ==C== 	
 *[[chav]] 	
 *[[chugger]] 	
