--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -31,6 +31,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *Finnish: [[pöytä]]
 *French: table ''f''
 *German: [[Tisch]] ''m''
+*Hungarian: [[asztal]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
