Modified primary definition <table#38559>

--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -8,7 +8,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 ===Noun===
 '''table''' (plural: [[tables]])
 
-#An item of [[furniture]] with a [[flat]] [[top]] [[surface]] supported by a [[pedestal]] or three or more (usually four) legs
+#An item of [[furniture]] with a [[flat]] [[top]] [[surface]] raised above the ground on one or more legs.
 #A flat [[tray]] which can be used as a table.
 #A [[matrix]] or [[grid]] of [[data]] arranged in [[row]]s and [[column]]s.
 #A collection of [[arithmetic]] calculations arranged in a table, such as [[multiplication]]s in a [[multiplication table]].
