--- a/wiki/Matthew.wikitext
+++ b/wiki/Matthew.wikitext
@@ -1,1 +1,9 @@
-matt
+==English==
+===Proper noun===
+'''Matthew'''
+
+# male given name. nickname: [[Matt]].
+
+===Transrations===
+*French: [[Matthieu]]
+*Italian: [[Matteo]]
