--- a/wiki/TV.wikitext
+++ b/wiki/TV.wikitext
@@ -39,6 +39,7 @@ From [[English]] "[[TV#English|TV]]," initialism for "[[television]]."
 #Abbreviation for [[television]]
 
 ===Synonyms===
+*[[vô tuyến truyền hình]] [無線傳形]
 *[[truyền hình]] (VN)
 *[[Ti-Vi]]
 
