--- a/wiki/%E4%BC%9D.wikitext
+++ b/wiki/%E4%BC%9D.wikitext
@@ -26,6 +26,26 @@
 ** '''[[On]]''': [[でん]] (den), [[てん]] (ten)
 ** '''[[Kun]]''': [[つたえる]] (tsutaeru), [[つたえ]] (tsutae), [[つたわる]] (tsutawaru)
 
+===Compounds===
+*[[伝奇]]
+*[[伝記]]
+*[[伝言]]
+*[[伝授]]
+*[[伝承]]
+*[[伝説]]
+*[[伝染]]
+*[[伝送]]
+*[[伝達]]
+*[[伝統]]
+*[[伝道]]
+*[[伝導]]
+*[[伝動]]
+*[[伝播]]
+*[[伝票]]
+*[[伝聞]]
+*[[伝来]]
+*[[伝令]]
+
 * '''Other info''':  
 
 ----
