--- a/wiki/%E4%BC%9D%E8%AA%AC.wikitext
+++ b/wiki/%E4%BC%9D%E8%AA%AC.wikitext
@@ -1,12 +1,7 @@
 == Japanese [[Kanji]] ==
+===Noun===
+[[伝]][[説]] (でんせつ, densetsu)
 
-'''[[furigana]]'''
-# [[でんせつ]]
-
-'''[[reading]]'''
-# densetsu
-
-'''[[meaning]]'''
 # [[tradition]]
 # [[legend]]
 # [[folklore]]
