--- a/wiki/belch.wikitext
+++ b/wiki/belch.wikitext
@@ -3,6 +3,10 @@
 
 ====Synonyms====
 *[[burp]]
+*[[foul]]
+*[[greedy]]
+*[[liquid gas]]
+*[[pass gas]]
 
 ====Translations====
 *Dutch: [[boeren]], een boer laten
