--- a/wiki/dogge.wikitext
+++ b/wiki/dogge.wikitext
@@ -1,2 +1,5 @@
 ==Middle English==
-[[dog]] derived from Anglo-saxon '''docga'''
+===Noun===
+#[[dog]] 
+===Etymology===
+Derived from Anglo-saxon '''docga'''.
