--- a/wiki/EE._UU..wikitext
+++ b/wiki/EE._UU..wikitext
@@ -1,3 +1,3 @@
 ==Spanish==
-==Abreviation==
-'''Estados Unidos ([[United States]])'''
+===Abreviation===
+#'''Estados Unidos ([[United States]])'''
