WordNet def <license#66014>

--- a/wiki/license.wikitext
+++ b/wiki/license.wikitext
@@ -1,5 +1,14 @@
-License (or [[licence]] ''Brit. Eng.'') - to give an official permission or a right to do / use.
-
-License is the British and international spelling of the verb and the American English spelling of both the verb and the noun.
-
-Licence is the British and international spelling of the noun.
+==English==
+===Verb===
+#The act of giving a formal (usually written) authorization.
+#:''It was decided to license Wikipedia under the GFDL.''
+#Authorize officially.
+#:''I am licensed to practice law in this state.''
+===Noun===
+#A legal document giving official permission to do something
+#:syn: [[permit]
+#Freedom to deviate deliberately from normally applicable rules or practices (especially in behavior or speech)
+#Excessive freedom; lack of due restraint.
+#:''When liberty becomes license dictatorship is near'', Will Durant
+====Alternate Spelling====
+*(''Commonwealth'') [[Licence]]
