--- a/wiki/license.wikitext
+++ b/wiki/license.wikitext
@@ -6,8 +6,8 @@
 #Authorize officially.
 #:''I am licensed to practice law in this state.''
 ===Noun===
-*licence (''Commonwealth'')
-*license (''US'')
+*'''licence''' (''Commonwealth'')
+*'''license''' (''US'')
 #A legal document giving official permission to do something, a [[permit]].
 #The legal terms a person is allowed to use a product, especially software.
 #:''Even if you bought this product, it does NOT belong to you. You have a '''license''' to use it under the terms of this agreement, until you breach this agreement.'' [http://www.cybersource.com.au/cyber/about/comparing_the_gpl_to_eula.pdf]
