--- a/wiki/envision.wikitext
+++ b/wiki/envision.wikitext
@@ -5,7 +5,6 @@
 From the Latin [[visionem]], a sight or thing seen.
 
 ===Verb===
-
-'''invision'''
+'''envision'''
 
 # To [[conceive]] or see within one's mind.
