--- a/wiki/license.wikitext
+++ b/wiki/license.wikitext
@@ -9,7 +9,7 @@
 *'''licence''' (''Commonwealth'')
 *'''license''' (''US'')
 #A legal document giving official permission to do something, a [[permit]].
-#The legal terms a person is allowed to use a product, especially software.
+#The legal terms under which a person is allowed to use a product, especially software.
 #:''Even if you bought this product, it does NOT belong to you. You have a '''license''' to use it under the terms of this agreement, until you breach this agreement.'' [http://www.cybersource.com.au/cyber/about/comparing_the_gpl_to_eula.pdf]
 #Freedom to deviate deliberately from normally applicable rules or practices (especially in behavior or speech)
 #Excessive freedom; lack of due restraint.
