modified wordnet def <marijuana#58165>

--- a/wiki/marijuana.wikitext
+++ b/wiki/marijuana.wikitext
@@ -1,1 +1,4 @@
-Noun -- [[severe]] [[narcotic]] [[drug]]
+==English==
+===Noun===
+#A drug illicit in most countries. Consists of the dried leaves of the hemp plant, smoked or chewed for euphoric effect.
+#The hemp plant itself, [[w:Cannabis sativa]].
