--- a/wiki/marijuana.wikitext
+++ b/wiki/marijuana.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 #A drug illicit in most countries. Consists of the dried leaves of the hemp plant, smoked or chewed for euphoric effect.
-#The hemp plant itself, [[w:Cannabis sativa]].
+#The hemp plant itself, [[w:Cannabis sativa|Cannabis sativa]].
