/* Noun */ dewikify plural <idiot#39074>

--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -4,7 +4,7 @@
 Greek ιδιωτης, idiôtês, "a private citizen, individual", from ιδιος, idios, "private", used derisively in ancient Athens to refer to one who declined to take part in public life.
 
 ===Noun===
-'''idiot''' ([[idiots]])
+'''idiot''' (plural, '''idiots''')
 
 #  A common term for a person of low general intelligence.
 #  A [[medical]] or [[psychological]] term meaning a person who has an intelligence quotient (IQ) below 20 (or 30?)
