--- a/wiki/Holy_Communion.wikitext
+++ b/wiki/Holy_Communion.wikitext
@@ -3,4 +3,4 @@
 ===Proper Noun===
 '''Holy Communion'''
 
-# A [[Christian]] sacrement, rooted in Jewish [[Shabbat]], commemorating the [[Last Supper]] of Christ.
+# A [[Christian]] sacrement commemorating the [[Last Supper]] of Christ.
