--- a/wiki/con.wikitext
+++ b/wiki/con.wikitext
@@ -113,3 +113,10 @@ from Latin ''[[cum]]''
 
 ===Personal pronoun===
 #[[you]] (''addressed to a person younger than the speaker, especially a child'')
+
+===Classifier===
+
+# indicate animate noun
+
+====Antonym====
+*[[cái]]
