--- a/wiki/mojibake.wikitext
+++ b/wiki/mojibake.wikitext
@@ -1,5 +1,5 @@
 ===Etymology===
-Japanese [[文字化け]] ([[もじばけ]], mojibake), from [[文字]] ([[もじ]], moji) "character" + [[化け]] ([[なけ]], bake) "change", thus "changed characters".
+Japanese [[文字化け]] ([[もじばけ]], mojibake), from [[文字]] ([[もじ]], moji) "character" + [[化け]] ([[ばけ]], bake) "change", thus "changed characters".
 
 ===Noun===
 '''mojibake''' (''uncountable'')
