--- a/wiki/abridgement.wikitext
+++ b/wiki/abridgement.wikitext
@@ -1,1 +1,11 @@
-Abridgement, <i>[[Noun]]</i> <HR> <P> <H3>Translations</H3><BR>• [[French]]: [[Raccourcissement]]<BR>• [[German]]: [[Abkürzung]]<BR>• [[Interlingua]]: [[Abbreviation]],  [[Compendio]], [[Summario]]<BR>• [[Italian]]: [[Compendio]]<BR>• [[Norwegian]]: [[forkortelse]]  ''c'' [[utdrag]] ''n'' <BR>• [[Portuguese]]: [[]]<BR>• [[Spanish]]: [[Abreviación]]<BR>
+===Noun===
+'''abridgement'''
+
+===Translations===
+*French: [[Raccourcissement]]
+*German: [[Abkürzung]]
+*[[Interlingua]]: [[Abbreviation]],  [[Compendio]], [[Summario]]
+*Italian]: [[Compendio]]
+*Japanese: [[短縮]], [[要約]]
+*[[Norwegian: [[forkortelse]]  ''c'' [[utdrag]] ''n'' 
+*Spanish: [[Abreviación]]
