--- a/wiki/powder.wikitext
+++ b/wiki/powder.wikitext
@@ -45,7 +45,7 @@
 {Powder puff}. See {Puff}, n.
 
 ====[[Translation]]s====
-*[[Spanish]]: 1. polvos, polvo 2. polvora
+*[[Spanish]]: 1. polvos, [[:es:polvo|polvo]] 2. polvora
 
 ==[[Verb]]==
 *[[imp.]] & [[p. p.]] Powdered;
