--- a/wiki/%E7%8B%AE.wikitext
+++ b/wiki/%E7%8B%AE.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': lion
+* '''Common Meaning''': [[lion]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,14 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[獅]]
+
+===Compounds===
+*[[狮子]]
+*[[狮子搏兔]]
+*[[狮子大开口]]
+*[[狮子狗]]
+*[[狮子舞]]
+*[[狮子座]]
 
 * '''Other info''': 
 
