French: [[bonjour]] <good morning#64276>

--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -6,7 +6,7 @@
 
 ====Translations====
 *Dutch: [[goeiemorgen]]
-*French: [[bon matin]]
+*French: [[bonjour]]
 *German: [[gutenmorgen]]
 *Hebrew: [[בוקר טוב]] (boker tov)
 *Japanese: (ohayo gozaimasu)
