{{hi}}: [[नमास्ते]] (to one person), [[नमास्कार]] (to several persons) <good morning#64276>

--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -9,6 +9,7 @@
 *French: [[bonjour]]
 *German: [[gutenmorgen]]
 *Hebrew: [[בוקר טוב]] (boker tov)
+*{{hi}}: [[नमास्ते]] (to one person), [[नमास्कार]] (to several persons)
 *Japanese: (ohayo gozaimasu)
 
 [[Category:Phrasebook]]
