--- a/wiki/acquiesce.wikitext
+++ b/wiki/acquiesce.wikitext
@@ -1,16 +1,16 @@
 ==English==
 ===Etymology===
-L. [[acquiescere]]; ad + [[quiescere]]  to be quiet, fr. [[quies]] rest: cf. F. [[acquiescer]].
+Latin ''[[acquiescere]]''; ''[[ad]]'' + ''[[quiescere]]'' to be quiet, from ''[[quies]]'' rest: compare French ''[[acquiescer]]''.
 
 ===Pronunciation===
 IPA: [[WEAE]] /ˌæ.kwiˈɛs/
 
 ===Intransitive Verb===
+'''acquiesce, acquiesced, acquiescing'''
 #To rest satisfied, or apparently satisfied, or to rest  without opposition and discontent (usually implying  previous opposition or discontent); to accept or consent  by silence or by omitting to object; &mdash; followed by in, formerly also by with and to.
+#:They were compelled to '''acquiesce''' in a government which they did not regard as just. - [[Thomas De Quincey]].
 #To concur upon conviction; as, to acquiesce in an opinion; to assent to; usually, to concur, not heartily but so far  as to forbear opposition.
-
-====Quotations====
-* ''I may be forced to acquiesce in these recent developments, but I can hardly be expected to make merry over them.''<BR>&mdash;  Sir Arthur Conan Doyle in ''The Adventure of the Speckled Band''
+#:I may be forced to '''acquiesce''' in these recent developments, but I can hardly be expected to make merry over them. &mdash;  - [[Wikisource:Author:Arthur Conan Doyle|Author:Arthur Conan Doyle]], ''The Adventure of the Speckled Band''
 
 ====Synonyms====
 To [submit]]; [[comply]]; [[yield]]; [[assent]]; [[agree]]; [[consent]]; [[accede]]; [[concur]]; [[conform]]; [[accept]] [[tacitly]].
