/* Translations */ <good morning#64276>

--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -7,7 +7,7 @@
 ====Translations====
 *Dutch: [[goeiemorgen]]
 *French: [[bonjour]]
-*German: [[gutenmorgen]]
+*German: [[Guten Morgen]]
 *Hebrew: [[בוקר טוב]] (boker tov)
 *{{hi}}: [[नमस्ते]] (to one person), [[नमस्कार]] (to several persons)
 *Japanese: (ohayo gozaimasu)
